feat: remove quality and status in materials & add language support in i18n

--- a/resources/js/plugins/i18n/locales/id.json
+++ b/resources/js/plugins/i18n/locales/id.json
@@ -162,9 +162,47 @@
   "Course Details": "Detail Kursus",
   "Academy": "Akademi",
   "Logistics": "Logistik",
-  "Dashboard": "Dasbor",
   "Fleet": "Armada",
-  "Logout": "Keluar",
+  "Item": "Item",
+  "Part Name": "Nama Part",
+  "12 NC": "12 NC",
+  "No Doc": "No Dok",
+  "Quantity": "Jumlah",
+  "Sample Size": "Ukuran Sampel",
+  "GI Level": "Level GI",
+  "Examiner": "Pemeriksa",
+  "Start Time": "Waktu Mulai",
+  "End Time": "Waktu Selesai",
+  "Duration": "Durasi",
+  "Batch": "Batch",
+  "Option": "Opsi",
+  "Status": "Status",
+  "IIR Date": "Tanggal IIR",
+  "Add IIR": "Tambah IIR",
+  "Edit Item": "Edit Item",
+  "Are you sure you want to delete this item?": "Apakah Anda yakin ingin menghapus item ini?",
+  "Add Material": "Tambah Material",
+  "Edit Material": "Edit Material",
+  "Are you sure you want to delete this material?": "Apakah Anda yakin ingin menghapus material ini?",
+  "Supplier Code": "Kode Pemasok",
+  "Supplier Name": "Nama Pemasok",
+  "Add Supplier": "Tambah Pemasok",
+  "Edit Supplier": "Edit Pemasok",
+  "Are you sure you want to delete this supplier?": "Apakah Anda yakin ingin menghapus pemasok ini?",
+  "Select an Item": "Pilih Item",
+  "Select a Supplier": "Pilih Pemasok",
+  "Select an Option": "Pilih Opsi",
+  "Select date range": "Pilih rentang tanggal",
+  "Print Global": "Cetak Global",
+  "Print Recap": "Cetak Ringkasan",
+  "Reset Filter": "Reset Filter",
+  "Save": "Simpan",
+  "Cancel": "Batal",
+  "Delete": "Hapus",
+  "Confirm": "Konfirmasi",
+  "Yes": "Ya",
+  "Active": "Aktif",
+  "Inactive": "Tidak Aktif",
   "5": "5",
   "10": "10",
   "20": "20",
