--- a/resources/js/plugins/i18n/locales/en.json
+++ b/resources/js/plugins/i18n/locales/en.json
@@ -162,14 +162,47 @@
   "Course Details": "Course Details",
   "Academy": "Academy",
   "Logistics": "Logistics",
-  "Dashboard": "Dashboard",
   "Fleet": "Fleet",
-  "5": "5",
-  "10": "10",
-  "20": "20",
-  "25": "25",
-  "50": "50",
-  "100": "100",
+  "Item": "Item",
+  "Part Name": "Part Name",
+  "12 NC": "12 NC",
+  "No Doc": "No Doc",
+  "Quantity": "Quantity",
+  "Sample Size": "Sample Size",
+  "GI Level": "GI Level",
+  "Examiner": "Examiner",
+  "Start Time": "Start Time",
+  "End Time": "End Time",
+  "Duration": "Duration",
+  "Batch": "Batch",
+  "Option": "Option",
+  "Status": "Status",
+  "IIR Date": "IIR Date",
+  "Add IIR": "Add IIR",
+  "Edit Item": "Edit Item",
+  "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
+  "Add Material": "Add Material",
+  "Edit Material": "Edit Material",
+  "Are you sure you want to delete this material?": "Are you sure you want to delete this material?",
+  "Supplier Code": "Supplier Code",
+  "Supplier Name": "Supplier Name",
+  "Add Supplier": "Add Supplier",
+  "Edit Supplier": "Edit Supplier",
+  "Are you sure you want to delete this supplier?": "Are you sure you want to delete this supplier?",
+  "Select an Item": "Select an Item",
+  "Select a Supplier": "Select a Supplier",
+  "Select an Option": "Select an Option",
+  "Select date range": "Select date range",
+  "Print Global": "Print Global",
+  "Print Recap": "Print Recap",
+  "Reset Filter": "Reset Filter",
+  "Save": "Save",
+  "Cancel": "Cancel",
+  "Delete": "Delete",
+  "Confirm": "Confirm",
+  "Yes": "Yes",
+  "Active": "Active",
+  "Inactive": "Inactive",
   "$vuetify": {
     "badge": "Badge",
     "noDataText": "No data available",
